--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -65,10 +65,12 @@
   <ItemGroup>
     <ClCompile Include="board.cpp" />
     <ClCompile Include="boardObject.cpp" />
+    <ClCompile Include="treeObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
     <ClInclude Include="boardObject.h" />
+    <ClInclude Include="treeObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
