--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="boardObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="treeObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="boardObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="treeObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
