OMG IT WORKS!!!

--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -65,11 +65,13 @@
   <ItemGroup>
     <ClCompile Include="board.cpp" />
     <ClCompile Include="boardObject.cpp" />
+    <ClCompile Include="houseObject.cpp" />
     <ClCompile Include="treeObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
     <ClInclude Include="boardObject.h" />
+    <ClInclude Include="houseObject.h" />
     <ClInclude Include="treeObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
